--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
-  "homepage": "https://github.com/rinZee/demo-site",
+  "homepage": "https://rinZee.github.io/demo-site",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
